# agent-protocol

./: .eslintignore  .eslintrc.js  .gitignore  .lintstagedrc  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  agent-openapi.yml  openapi.json  openapi.yaml  openapi.yml  package-lock.json  package.json  test.sh  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  convert-openapi.yml  docs.yaml  js-sdk-build.yaml  js-sdk-lint.yaml  js-sdk-publish.yaml  js-sdk-shared.yaml  package-publish.yaml  python-client-publish.yaml  python-sdk-publish.yaml  (+1 more)
.husky/: pre-commit
.postman/: api  api_58ce1a49-5e5c-4b0f-aac6-103d3f4c0187  api_63f5e342-f43f-45fa-9a50-87934ccddcab  api_aba4a8ea-ccb3-4ed9-ac12-054d093c6198  api_cb0ce559-e9f8-4776-b361-585a1090dbdf  api_dcd17206-2f7c-42dc-ae37-f4cdbe57c6b6
agent/: README.md  openapi.yml
agent/python/: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  test.py
agent/python/agent_protocol/: __init__.py  agent.py  cli.py  db.py  dependencies.py  models.py  server.py
agent/python/agent_protocol/tests/: compliance.py
agent/python/agent_protocol/utils/compliance/: main.py
agent/python/e2b_agent/: __init__.py  agent.py  dependencies.py  models.py  server.py  start.py
agent/python/e2b_agent/routers/: actions.py  state.py  tasks.py
agent/python/examples/: beebot.py  minimal.py  smol_developer.py
agent/python/test/: test.py  test_beebot.py  test_smol.py
agent_client/python/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
agent_client/python/.openapi-generator/: FILES
agent_client/python/agent_protocol_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
agent_client/python/agent_protocol_client/api/: agent_api.py
agent_client/python/agent_protocol_client/docs/: AgentApi.md
agent_client/python/agent_protocol_client/models/: __init__.py  agent_step.py  agent_step_all_of.py  agent_step_request_body.py  agent_task.py  agent_task_all_of.py  agent_task_request_body.py  artifact.py  step.py  step_all_of.py  step_request_body.py  step_result.py  task.py  task_all_of.py  task_request_body.py
agent_client/python/examples/: beebot.py  minimal.py
agent_client/python/scripts/: generate.sh
cli/: Cargo.toml  README.md  generate_from_spec.sh
cli/src/: args.rs  main.rs
cli/src/apis/: agent_api.rs  configuration.rs  mod.rs
cli/src/models/: artifact.rs  get_agent_task_404_response.rs  mod.rs  pagination.rs  step.rs  step_request_body.rs  task.rs  task_artifacts_list_response.rs  task_list_response.rs  task_request_body.rs  task_steps_list_response.rs
docs/: .eslintrc.js  README.md  mdx-components.jsx  package-lock.json  package.json
rfcs/: 2023-08-14-AP-RFC.md  2023-08-28-Pagination-RFC.md  2023-08-28-agent-created-RFC-.md  2023-08-28-list-entities-RFC.md  2023-09-15-endpoint-schema-RFC.md  2023-09-15-endpoint-schema.md  2023-12-07-config-options.md  2023-12-07-info-endpoint.md  2024-01-30-secrets-RFC.md  2024-02-11-output-for-new-task.md  AP-RFC-001.md  AP-RFC-002.md  AP-RFC-003.md  AP-RFC-1.md  AP-RFC-X.md  template.md
schemas/: openapi.json  openapi.yml
testing_suite/: agent_protocol_latest.json  agent_protocol_v0.4.json  agent_protocol_v1.json  contract_tests.json  contract_tests_env.json  local_test.sh  test.sh
(+112 files in other folders)
