[tool.poetry]
name = "agent-protocol"
version = "0.0.2"
description = "API for interacting with Agent"
authors = ["e2b <hello@e2b.dev>"]
license = "MIT"
packages = [{ include = "agent_protocol" }]

[tool.poetry.dependencies]
python = ">=3.7, <4.0.0"
fastapi = "^0.100.0"
hypercorn = {extras = ["trio"], version = "^0.14.4"}

[tool.poetry.group.dev.dependencies]
fastapi-code-generator = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
src = "src.__main__:main"

[project.urls]
"Homepage" = "https://github.com/e2b/sdk"
"Bug Tracker" = "https://github.com/e2b/sdk/issues"
