[tool.poetry]
name = "agent-protocol"
version = "0.1.0"
description = "API for interacting with Agent"
authors = ["e2b <hello@e2b.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://e2b.dev/"
repository = "https://github.com/e2b-dev/sdk/tree/main/agent/python/"
packages = [{ include = "agent_protocol" }]

[tool.poetry.dependencies]
python = ">=3.7, <4.0.0"
fastapi = "^0.100.0"
hypercorn = {extras = ["trio"], version = "^0.14.4"}

[tool.poetry.group.dev.dependencies]
fastapi-code-generator = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
src = "src.__main__:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/e2b/sdk/issues"
